--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "eslint": "^8.54.0",
     "eslint-plugin-vue": "^9.17.0",
     "eslint-plugin-vue-scoped-css": "^2.5.1",
+    "oidc-client-ts": "^3.0.0-beta.0",
     "prettier": "^3.0.3",
     "sass": "^1.69.5",
     "vite": "^4.4.11",
