--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,10 @@
     "format:fix": "prettier --write src/"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.8.7",
+    "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
+    "oidc-client-ts": "^3.0.0-beta.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
@@ -23,7 +27,6 @@
     "eslint": "^8.54.0",
     "eslint-plugin-vue": "^9.17.0",
     "eslint-plugin-vue-scoped-css": "^2.5.1",
-    "oidc-client-ts": "^3.0.0-beta.0",
     "prettier": "^3.0.3",
     "sass": "^1.69.5",
     "vite": "^4.4.11",
