--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "lint:check": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --ignore-path .gitignore",
     "lint:fix": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format:check": "prettier --check src/",
-    "format:fix": "prettier --write src/"
+    "format:fix": "prettier --write src/",
+    "api": "json-server --watch api/db.json"
   },
   "dependencies": {
     "@tanstack/vue-query": "^5.8.7",
@@ -27,6 +28,7 @@
     "eslint": "^8.54.0",
     "eslint-plugin-vue": "^9.17.0",
     "eslint-plugin-vue-scoped-css": "^2.5.1",
+    "json-server": "^0.17.4",
     "prettier": "^3.0.3",
     "sass": "^1.69.5",
     "vite": "^4.4.11",
