--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@tanstack/vue-query": "^5.8.7",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
+    "normalize.css": "^8.0.1",
     "oidc-client-ts": "^3.0.0-beta.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
