--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
-    "vue-tippy": "^6.3.1"
+    "vue-tippy": "^6.3.1",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
