--- a/client/package.json
+++ b/client/package.json
@@ -14,15 +14,19 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
+    "@shimyshack/uid": "^0.1.9",
     "@tanstack/vue-query": "^5.8.7",
+    "@vee-validate/yup": "^4.12.2",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "oidc-client-ts": "^3.0.0-beta.0",
     "pinia": "^2.1.7",
+    "vee-validate": "^4.12.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vue-tippy": "^6.3.1",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
