--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@shimyshack/uid": "^0.1.9",
     "@tanstack/vue-query": "^5.8.7",
     "@vee-validate/yup": "^4.12.2",
+    "@vueuse/router": "^10.6.1",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "oidc-client-ts": "^3.0.0-beta.0",
