--- a/api/src/2-application/Application/Application.csproj
+++ b/api/src/2-application/Application/Application.csproj
@@ -14,6 +14,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="ErrorOr" Version="1.3.0" />
+      <PackageReference Include="FluentResults" Version="3.15.2" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.1" />
       <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
