validation with exception

--- a/api/src/3-presentation/Api/Api.csproj
+++ b/api/src/3-presentation/Api/Api.csproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\1-core\Application\Application.csproj" />
+      <ProjectReference Include="..\..\2-infrastructure\Infrastructure\Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
