unit test validators

--- a/api/src/1-core/Application/Application.csproj
+++ b/api/src/1-core/Application/Application.csproj
@@ -21,4 +21,9 @@
       <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="Chores.Application.UnitTests" />
+    </ItemGroup>
+
+
 </Project>
