--- a/api/tests/1-core/Application.IntegrationTests/Application.IntegrationTests.csproj
+++ b/api/tests/1-core/Application.IntegrationTests/Application.IntegrationTests.csproj
@@ -13,6 +13,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing" Version="8.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
         <PackageReference Include="NSubstitute" Version="5.1.0" />
