--- a/api/src/3-presentation/Api/appsettings.json
+++ b/api/src/3-presentation/Api/appsettings.json
@@ -8,9 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "Authentication": {
     "Issuer": "",
     "Audiences": []
+  },
+  "Clients": {
+    "ClientUrls": []
   }
 }
