--- a/api/src/3-presentation/Api/appsettings.json
+++ b/api/src/3-presentation/Api/appsettings.json
@@ -1,9 +1,18 @@
 {
+  "ConnectionStrings": {
+    "AppDbContext": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Authentication": {
+    "Issuer": "",
+    "Audiences": []
+  },
+  "Clients": {
+    "ClientUrls": []
+  }
 }
