--- a/api/src/1-core/Application/Application.csproj
+++ b/api/src/1-core/Application/Application.csproj
@@ -13,11 +13,17 @@
       <PackageReference Include="ErrorOr" Version="1.3.0" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.1" />
       <PackageReference Include="MediatR" Version="12.2.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+        <InternalsVisibleTo Include="Chores.Application.UnitTests" />
+    </ItemGroup>
+
 
 </Project>
