--- a/api/src/3-presentation/Api/Api.csproj
+++ b/api/src/3-presentation/Api/Api.csproj
@@ -7,6 +7,7 @@
         <AssemblyName>Chores.Api</AssemblyName>
         <RootNamespace>Chores.Api</RootNamespace>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <UserSecretsId>52125985-0217-47fc-a30c-638e3116ec84</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
@@ -21,6 +22,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\1-core\Application\Application.csproj" />
       <ProjectReference Include="..\..\2-infrastructure\Infrastructure\Infrastructure.csproj" />
+      <ProjectReference Include="..\..\2-infrastructure\Persistence\Persistence.csproj" />
     </ItemGroup>
 
 </Project>
