upgrade js packages

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "chores-client",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -14,31 +15,31 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
     "@shimyshack/uid": "^0.1.9",
-    "@tanstack/vue-query": "^5.8.7",
-    "@vee-validate/yup": "^4.12.2",
-    "@vueuse/router": "^10.6.1",
+    "@tanstack/vue-query": "^5.15.0",
+    "@vee-validate/yup": "^4.12.3",
+    "@vueuse/router": "^10.7.0",
     "axios": "^1.6.2",
-    "date-fns": "^2.30.0",
+    "date-fns": "^3.0.6",
     "oidc-client-ts": "^3.0.0-beta.0",
     "pinia": "^2.1.7",
-    "vee-validate": "^4.12.2",
-    "vue": "^3.3.4",
+    "vee-validate": "^4.12.3",
+    "vue": "^3.3.13",
     "vue-router": "^4.2.5",
-    "vue-tippy": "^6.3.1",
+    "vue-tippy": "^6.4.0",
     "vue-toastification": "^2.0.0-rc.5",
-    "yup": "^1.3.2"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@vitejs/plugin-vue": "^4.4.0",
+    "@rushstack/eslint-patch": "^1.6.1",
+    "@vitejs/plugin-vue": "^5.0.0",
     "@vue/eslint-config-prettier": "^8.0.0",
-    "eslint": "^8.54.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "eslint-plugin-vue-scoped-css": "^2.5.1",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.19.2",
+    "eslint-plugin-vue-scoped-css": "^2.6.1",
     "json-server": "^0.17.4",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.1",
     "sass": "^1.69.5",
-    "vite": "^4.4.11",
+    "vite": "^5.0.10",
     "vite-plugin-eslint": "^1.8.1",
     "vue-eslint-parser": "^9.3.2"
   }
