--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "pinia": "^2.1.7",
     "vee-validate": "^4.12.3",
     "vue": "^3.3.13",
+    "vue-multiselect": "^3.0.0-beta.3",
     "vue-router": "^4.2.5",
     "vue-tippy": "^6.4.0",
     "vue-toastification": "^2.0.0-rc.5",
