--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,6 @@
     "format:fix": "prettier --write src/"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.17",
     "@shimyshack/uid": "^0.1.9",
     "@tanstack/vue-query": "^5.17.9",
     "@vee-validate/yup": "^4.12.4",
@@ -22,6 +21,8 @@
     "date-fns": "^3.1.0",
     "oidc-client-ts": "^3.0.0-beta.0",
     "pinia": "^2.1.7",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.46.0",
     "vee-validate": "^4.12.4",
     "vue": "^3.4.6",
     "vue-multiselect": "^3.0.0-beta.3",
