--- a/api/src/3-presentation/Api/appsettings.Development.json
+++ b/api/src/3-presentation/Api/appsettings.Development.json
@@ -1,2 +1,17 @@
 {
+  "Serilog": {
+    "MinimumLevel": {
+      "Override": {
+        "Chores": "Debug"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341"
+        }
+      }
+    ]
+  }
 }
