Upgrade packages, add Serilog, refactor .Any() usage (#24)
* refactor .Any() usage on enumerables

* add & upgrade packages

* set up Program.cs for Serilog

* working config

* move Serilog registration down

* add in validate options

* update configuration

--- a/api/src/3-presentation/Api/appsettings.Development.json
+++ b/api/src/3-presentation/Api/appsettings.Development.json
@@ -1,9 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Chores": "Debug"
-    }
+  "Serilog": {
+    "MinimumLevel": {
+      "Override": {
+        "Chores": "Debug"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341"
+        }
+      }
+    ]
   }
 }
