--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@shimyshack/uid": "^0.1.9",
     "@tanstack/vue-query": "^5.36.0",
     "@vee-validate/yup": "^4.12.8",
+    "@vueuse/core": "^10.9.0",
     "@vueuse/router": "^10.9.0",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
