--- a/client/package.json
+++ b/client/package.json
@@ -14,34 +14,34 @@
   },
   "dependencies": {
     "@shimyshack/uid": "^0.1.9",
-    "@tanstack/vue-query": "^5.17.9",
-    "@vee-validate/yup": "^4.12.4",
-    "@vueuse/router": "^10.7.1",
-    "axios": "^1.6.5",
-    "date-fns": "^3.1.0",
-    "oidc-client-ts": "^3.0.0-beta.0",
+    "@tanstack/vue-query": "^5.36.0",
+    "@vee-validate/yup": "^4.12.8",
+    "@vueuse/core": "^10.9.0",
+    "@vueuse/router": "^10.9.0",
+    "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "pinia": "^2.1.7",
-    "primeicons": "^6.0.1",
-    "primevue": "^3.46.0",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.0.0-beta.2",
     "vee-validate": "^4.12.4",
-    "vue": "^3.4.6",
-    "vue-multiselect": "^3.0.0-beta.3",
-    "vue-router": "^4.2.5",
+    "vue": "^3.4.21",
+    "vue-multiselect": "3.0.0",
+    "vue-router": "^4.3.0",
     "vue-tippy": "^6.4.1",
     "vue-toastification": "^2.0.0-rc.5",
-    "yup": "^1.3.3"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.6.1",
-    "@vitejs/plugin-vue": "^5.0.2",
+    "@rushstack/eslint-patch": "^1.8.0",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
-    "eslint": "^8.56.0",
-    "eslint-plugin-vue": "^9.19.2",
-    "eslint-plugin-vue-scoped-css": "^2.6.1",
-    "prettier": "^3.1.1",
-    "sass": "^1.69.7",
-    "vite": "^5.0.11",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.23.0",
+    "eslint-plugin-vue-scoped-css": "^2.8.0",
+    "prettier": "^3.2.5",
+    "sass": "^1.77.0",
+    "vite": "^5.2.8",
     "vite-plugin-eslint": "^1.8.1",
-    "vue-eslint-parser": "^9.4.0"
+    "vue-eslint-parser": "^9.4.2"
   }
 }
