--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@vueuse/router": "^10.9.0",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "4.0.0-beta.3",
