implement BFF for local development

--- a/frontend/bff/appsettings.json
+++ b/frontend/bff/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Authority": "",
+    "ClientId": "",
+    "ClientSecret": ""
+  },
+  "RemoteApis": {
+    "ChoresApiUrl": ""
+  },
+  "Frontend": {
+    "DevServerUrl": ""
+  }
 }
