--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image: ['api', 'client']
+        image: ['api', 'frontend']
     steps:
     - uses: actions/checkout@v4
     - name: Set up Docker Buildx
