--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,18 +1,18 @@
-name: client CI
+name: Frontend CI
 
 on:
   pull_request:
     branches: ['main']
 
 env:
-  NODE_VERSION: '18.x'
+  NODE_VERSION: '20.x'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./client
+        working-directory: ./frontend/app
     steps:
     - uses: actions/checkout@v4
     - name: Set up Node
