update BFF to work behind reverse proxy

--- a/frontend/bff/appsettings.json
+++ b/frontend/bff/appsettings.json
@@ -2,7 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Yarp": "Warning"
     }
   },
   "AllowedHosts": "*",
@@ -15,6 +16,6 @@
     "ChoresApiUrl": ""
   },
   "Frontend": {
-    "DevServerUrl": ""
+    "ClientUrl": ""
   }
 }
