--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "lodash": "^4.17.21",
+    "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "4.0.0-beta.3",
