--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -24,8 +24,10 @@
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "4.0.0-beta.4",
+    "quill": "^2.0.2",
     "vee-validate": "^4.12.4",
     "vue": "^3.4.21",
+    "vue-dompurify-html": "^5.0.1",
     "vue-router": "^4.3.0",
     "vue-tippy": "^6.4.1",
     "vue-toastification": "^2.0.0-rc.5",
