--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -23,9 +23,11 @@
     "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
-    "primevue": "4.0.0-beta.3",
+    "primevue": "4.0.0-beta.4",
+    "quill": "^2.0.2",
     "vee-validate": "^4.12.4",
     "vue": "^3.4.21",
+    "vue-dompurify-html": "^5.0.1",
     "vue-router": "^4.3.0",
     "vue-tippy": "^6.4.1",
     "vue-toastification": "^2.0.0-rc.5",
@@ -34,15 +36,15 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.10.3",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
-    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "eslint-plugin-vue-scoped-css": "^2.8.0",
-    "prettier": "^3.2.5",
-    "sass": "^1.77.2",
-    "vite": "^5.2.8",
+    "prettier": "^3.3.0",
+    "sass": "^1.77.4",
+    "vite": "^5.2.12",
     "vite-plugin-eslint": "^1.8.1",
-    "vue-eslint-parser": "^9.4.2"
+    "vue-eslint-parser": "^9.4.3"
   }
 }
